# dp-signal-embedding

./: LICENSE  README.md  pyproject.toml
api/: server.py
configs/: covariance.yaml  jumping_means.yaml  skorch_nn_Lee2019_MI.yaml
signal_embedding/: controller.py  main.py
signal_embedding/models/: __init__.py  base.py  covariance.py  jumping_means.py  skorch_nn.py  test.py
signal_embedding/utils/: logging.py  mockup.py
